feat(java): Java 8 compatibility (HttpURLConnection, no Map.of)